# dog_vs_cat

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
configs/: config.yaml
kaggle/: README.md
src/dog_vs_cat/dataset_data_loader/: make_dataloader.py
src/dog_vs_cat/engine/: trainer.py
src/dog_vs_cat/grad_cam/: grad_cam.py
src/dog_vs_cat/models/: build_model.py
src/dog_vs_cat/optimizers/: build_optimizer.py
src/dog_vs_cat/scripts/: download_data.py  main.py
src/dog_vs_cat/split_data/: split_train_val.py
src/dog_vs_cat/transforms/: image_transforms.py
src/dog_vs_cat/visualization/: visualizer.py
